# disco2000

./: .gitignore  ASSISTANT_CONTEXT.md  CHANGELOG.md  GRID_LIST_VIEW_MODE.md  PERFORMANCE_OPTIMIZATIONS.md  PWA_GUIDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  requirements.txt  vercel.json  vite.config.js
api/: index.py
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/models/: record.py
backend/app/routers/: records.py
backend/app/schemas/: record.py
backend/app/services/: discogs.py
backend/disco2000_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: GUIDELINES.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx
public/: manifest.json  sw.js
scripts/: generate-icons.js
src/: App.css  App.jsx  firebase.js  index.css  main.jsx  theme.js
src/components/: AddStudioAlbum.jsx  AlbumCard.jsx  AlbumDetailsModal.jsx  AlbumsPerYearChart.jsx  ArtistManager.jsx  CollectionExplorer.jsx  CollectionStats.jsx  CompactCountryDistribution.jsx  CountryDistribution.jsx  CountrySelector.jsx  CreateList.jsx  GenresDistribution.jsx  GoogleAuthButton.jsx  ListAlbumsModal.jsx  ListsManager.jsx  LoadingFallback.jsx  PWAStatus.jsx  ProfilePage.jsx  SessionExpiredBanner.jsx  SessionStatusBadge.jsx  StudioStats.jsx  ViewControls.jsx  YearHeatmap.jsx
src/utils/: authFetch.js  cookie.js  countries.js  debounce.js  instrumentedFetch.js  jwt.js  serviceWorkerUtils.js  tokenService.js  useViewPreferences.js
(+2 files in other folders)
